--- a/index.html
+++ b/index.html
@@ -89,9 +89,52 @@
     <script>
         // Lista de alunos fictícios (adicione mais se desejar)
         const students = [
-            { id: 1, name: "Ana Clara Santos", phone: "21975477253", responsible: "Mãe: (21) 97547-7253", smsSent: false },
-            { id: 2, name: "Bruno Oliveira", phone: "21982006325", responsible: "Pai: (21) 98200-6325", smsSent: false },
-            { id: 40, name: "Ricardo Falcão", phone: "21988008877", responsible: "Pai: (21) 98800-8877", smsSent: false }
+    { id: 1, name: "Ana Clara Santos", phone: "21975477253", responsible: "Mãe: (21) 97547-7253", smsSent: false },
+    { id: 2, name: "Bruno Oliveira", phone: "21982006325", responsible: "Pai: (21) 98200-6325", smsSent: false },
+    { id: 3, name: "Carla Mendes", phone: "21981234567", responsible: "Mãe: (21) 98123-4567", smsSent: false },
+    { id: 4, name: "Diego Lima", phone: "21987654321", responsible: "Pai: (21) 98765-4321", smsSent: false },
+    { id: 5, name: "Eduarda Rocha", phone: "21991112222", responsible: "Mãe: (21) 99111-2222", smsSent: false },
+    { id: 6, name: "Felipe Souza", phone: "21992223333", responsible: "Pai: (21) 99222-3333", smsSent: false },
+    { id: 7, name: "Gabriela Freitas", phone: "21993334444", responsible: "Mãe: (21) 99333-4444", smsSent: false },
+    { id: 8, name: "Henrique Duarte", phone: "21994445555", responsible: "Pai: (21) 99444-5555", smsSent: false },
+    { id: 9, name: "Isabela Teixeira", phone: "21995556666", responsible: "Mãe: (21) 99555-6666", smsSent: false },
+    { id: 10, name: "João Pedro Ribeiro", phone: "21996667777", responsible: "Pai: (21) 99666-7777", smsSent: false },
+    { id: 11, name: "Kamila Martins", phone: "21997778888", responsible: "Mãe: (21) 99777-8888", smsSent: false },
+    { id: 12, name: "Lucas Fernandes", phone: "21998889999", responsible: "Pai: (21) 99888-9999", smsSent: false },
+    { id: 13, name: "Mariana Pires", phone: "21990001111", responsible: "Mãe: (21) 99000-1111", smsSent: false },
+    { id: 14, name: "Nathan Moreira", phone: "21990112233", responsible: "Pai: (21) 99011-2233", smsSent: false },
+    { id: 15, name: "Olívia Brito", phone: "21990223344", responsible: "Mãe: (21) 99022-3344", smsSent: false },
+    { id: 16, name: "Pedro Henrique Silva", phone: "21990334455", responsible: "Pai: (21) 99033-4455", smsSent: false },
+    { id: 17, name: "Quezia Rocha", phone: "21990445566", responsible: "Mãe: (21) 99044-5566", smsSent: false },
+    { id: 18, name: "Rafael Andrade", phone: "21990556677", responsible: "Pai: (21) 99055-6677", smsSent: false },
+    { id: 19, name: "Sabrina Moura", phone: "21990667788", responsible: "Mãe: (21) 99066-7788", smsSent: false },
+    { id: 20, name: "Tiago Gonçalves", phone: "21990778899", responsible: "Pai: (21) 99077-8899", smsSent: false },
+    { id: 21, name: "Ursula Xavier", phone: "21990889900", responsible: "Mãe: (21) 99088-9900", smsSent: false },
+    { id: 22, name: "Vinícius Prado", phone: "21990990011", responsible: "Pai: (21) 99099-0011", smsSent: false },
+    { id: 23, name: "Wesley Amaral", phone: "21991101122", responsible: "Pai: (21) 99110-1122", smsSent: false },
+    { id: 24, name: "Xuxa Barbosa", phone: "21991212233", responsible: "Mãe: (21) 99121-2233", smsSent: false },
+    { id: 25, name: "Yasmin Torres", phone: "21991323344", responsible: "Mãe: (21) 99132-3344", smsSent: false },
+    { id: 26, name: "Zeca Ramos", phone: "21991434455", responsible: "Pai: (21) 99143-4455", smsSent: false },
+    { id: 27, name: "Amanda Souza", phone: "21991545566", responsible: "Mãe: (21) 99154-5566", smsSent: false },
+    { id: 28, name: "Bernardo Braga", phone: "21991656677", responsible: "Pai: (21) 99165-6677", smsSent: false },
+    { id: 29, name: "Cíntia Lopes", phone: "21991767788", responsible: "Mãe: (21) 99176-7788", smsSent: false },
+    { id: 30, name: "Daniel Costa", phone: "21991878899", responsible: "Pai: (21) 99187-8899", smsSent: false },
+    { id: 31, name: "Elaine Lima", phone: "21991989900", responsible: "Mãe: (21) 99198-9900", smsSent: false },
+    { id: 32, name: "Fabiano Rocha", phone: "21992090011", responsible: "Pai: (21) 99209-0011", smsSent: false },
+    { id: 33, name: "Giovana Pinheiro", phone: "21992101122", responsible: "Mãe: (21) 99210-1122", smsSent: false },
+    { id: 34, name: "Heitor Santos", phone: "21992212233", responsible: "Pai: (21) 99221-2233", smsSent: false },
+    { id: 35, name: "Ingrid Maia", phone: "21992323344", responsible: "Mãe: (21) 99232-3344", smsSent: false },
+    { id: 36, name: "Joaquim Alves", phone: "21992434455", responsible: "Pai: (21) 99243-4455", smsSent: false },
+    { id: 37, name: "Karla Ribeiro", phone: "21992545566", responsible: "Mãe: (21) 99254-5566", smsSent: false },
+    { id: 38, name: "Leandro Moreira", phone: "21992656677", responsible: "Pai: (21) 99265-6677", smsSent: false },
+    { id: 39, name: "Marta Neves", phone: "21992767788", responsible: "Mãe: (21) 99276-7788", smsSent: false },
+    { id: 40, name: "Nicolas Oliveira", phone: "21992878899", responsible: "Pai: (21) 99287-8899", smsSent: false },
+    { id: 41, name: "Otávio Cunha", phone: "21992989900", responsible: "Pai: (21) 99298-9900", smsSent: false },
+    { id: 42, name: "Patrícia Borges", phone: "21993090011", responsible: "Mãe: (21) 99309-0011", smsSent: false },
+    { id: 43, name: "Quirino Souza", phone: "21993101122", responsible: "Pai: (21) 99310-1122", smsSent: false },
+    { id: 44, name: "Rute Cardoso", phone: "21993212233", responsible: "Mãe: (21) 99321-2233", smsSent: false },
+    { id: 45, name: "Silas Ferreira", phone: "21993323344", responsible: "Pai: (21) 99332-3344", smsSent: false }
+
         ];
 
         function updateStudentStatus(studentId) {
